--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -7,8 +7,7 @@
   background: #eee;
   overflow-x: hidden;
   padding: 8px 0;
-  margin: 10px;
-
+  float: left;
 
   }
 
